--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
+    "framer-motion": "^12.12.0",
+    "fs": "^0.0.1-security",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.510.0",
+    "path": "^0.12.7",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
+    "tailwindcss": "^4.1.6",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
