--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "firebase": "^11.7.1",
     "framer-motion": "^12.12.0",
     "fs": "^0.0.1-security",
     "gsap": "^3.13.0",
